[package]
name = "env-sort"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
itertools = "0.10.5"
winreg = "0.10.1"
regex = "1.7.0"
colored = "2.0.0"
find-target = "0.1.0"

[dev-dependencies]

[features]
default = []
